# Central-Discord-Bot

./: .env.example  .gitignore  CMakeLists.txt  README.md  bot.py  i18n.py  requirements.txt
cogs/: appeals.py
lang/: de.json  en.json
libs/DPP/include/dpp/: application.h
libs/DPP/src/dpp/: application.cpp
libs/DPP/src/dpp/cluster/: dm.cpp
src/: globals.hpp  main.cpp  signal_handler.cpp  signal_handler.h  utilities.hpp
src/class/: acknowledge_payload.cpp  acknowledge_payload.h  json_wrapper.cpp  json_wrapper.h  queued_messages.cpp  queued_messages.h  translations.cpp  translations.h
src/commands/: appeals.cpp  appeals.h
